--- a/src/python3_course_for_ts_devs/notebooks/string.ipynb
+++ b/src/python3_course_for_ts_devs/notebooks/string.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "```ts\n",
-    "const str = 'this is a string'\n",
-    "```"
+    "const str = \"this is a string\";\n",
+    "```\n"
    ]
   },
   {
