feat: 目录/number

--- a/src/python3_course_for_ts_devs/notebooks/types.ipynb
+++ b/src/python3_course_for_ts_devs/notebooks/types.ipynb
@@ -5,17 +5,17 @@
    "metadata": {},
    "source": [
     "```ts\n",
-    "undefined //\n",
-    "null\n",
-    "boolean\n",
-    "number\n",
-    "bigint\n",
-    "string\n",
-    "symbol\n",
-    "\n",
-    "array\n",
-    "function\n",
-    "\n",
+    "number // 数字\n",
+    "string // 字符串\n",
+    "boolean // 布尔\n",
+    "symbol // 符号\n",
+    "object // 对象\n",
+    "  function // 函数\n",
+    "  array // 数组\n",
+    "  date // 时间\n",
+    "  regexp // 正则\n",
+    "null // 空对象\n",
+    "undefined // 未定义\n",
     "```\n"
    ]
   },
@@ -24,7 +24,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "基本型：\n",
+    "Number（数字）、String（字符串）、Tuple（元组）\n",
+    "\n",
+    "索引类型：\n",
+    "List（列表）、Dictionary（字典）、Set（集合）\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
