--- a/src/python3_course_for_ts_devs/notebooks/var.ipynb
+++ b/src/python3_course_for_ts_devs/notebooks/var.ipynb
@@ -20,9 +20,11 @@
     "```ts\n",
     "a = \"变量可以被更改\";\n",
     "\n",
-    "b = \"string 是基本型常量，不可被修改\"; // Uncaught TypeError: Assignment to constant variable.\n",
+    "b = \"string 是基本型常量，不可被修改\";\n",
+    "// Uncaught TypeError: Assignment to constant variable.\n",
     "\n",
-    "c = { d: \"引用型常量的属性\" }; // Uncaught TypeError: Assignment to constant variable. 尽管看起来一样，但实际上常量 c 被分配了一个新的内存地址;\n",
+    "c = { d: \"引用型常量的属性\" }; // 尽管看起来一样，但实际上常量 c 被分配了一个新的内存地址\n",
+    "// Uncaught TypeError: Assignment to constant variable.\n",
     "\n",
     "c.d = \"我只修改了引用型常量属性 d 的值，常量 c 内存地址没变，没有问题\";\n",
     "```\n"
@@ -50,7 +52,7 @@
     "\n",
     "\"\"\"\n",
     "那么，你可能会问，变量定义不需要声明，那常量呢\n",
-    "当然了，常量也不需要声明，因为 python 中没 有 常 量，牛逼\n",
+    "当然了，常量也不需要声明，因为 python 中没 有 常 量。牛逼\n",
     "\n",
     "尽管 python 中没有常量的概念，但是我们依然可以通过全大写命名法来约定一个变量是常量\n",
     "\"\"\"\n",
