--- a/src/python3_course_for_ts_devs/notebooks/var.ipynb
+++ b/src/python3_course_for_ts_devs/notebooks/var.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 再熟悉下 TS\n",
+    "\n",
     "在 TS 中我们一般会这样定义一个变量/常量\n",
     "\n",
     "```ts\n",
@@ -46,7 +48,7 @@
     }
    ],
    "source": [
-    "# 在 python 中变量是这样定义的\n",
+    "# 但在 python 中变量是这样定义的\n",
     "\n",
     "a = \"这是一个变量\"  # 没错，就是这样，直接定义，不需要声明\n",
     "\n",
@@ -83,7 +85,10 @@
     "\n",
     "python 中变量定义无需声明\n",
     "\n",
-    "没有常量的概念，如果想定义常量，一是靠全大写命名法约定，但是约定是约定，它依然可以被修改，二是借助枚举类型实现真正的不可变常量\n"
+    "python 中没有常量的概念，如果想定义常量\n",
+    "\n",
+    "1. 使用全大写命名法约定，但是约定是约定，它依然可以被修改\n",
+    "2. 借助枚举类型实现真正的不可变常量\n"
    ]
   }
  ],
