--- a/src/python3_course_for_ts_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_ts_devs/notebooks/number.ipynb
@@ -57,10 +57,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '1+2j'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mint\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39m1+2j\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '1+2j'"
+     ]
+    }
+   ],
+   "source": [
+    "int(\"1+2j\")"
+   ]
   },
   {
    "cell_type": "code",
