--- a/src/python3_course_for_ts_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_ts_devs/notebooks/number.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TS 中数值类型有两种\n",
+    "> ”一个看上去是整数的东西，其实都是浮点数“ -- mdn web docs\n",
+    "\n",
+    "当然原文也写了例外情况（bigint 类型）\n",
+    "\n",
+    "TS 中有两种数值类型，其中 number 是我们平时用的最多的，它就是浮点型，无论什 么 时 候\n",
+    "\n",
+    "另外一个例外就是 bigint 类型，它确实是整型\n",
     "\n",
     "- number：双精度 64 位浮点型\n",
     "- bigint：长整型\n",
@@ -38,42 +44,57 @@
    "source": [
     "\"\"\" \n",
     "python 中数值类型有三种：\n",
-    "int：长整型，包括正/负整型（支持 8 / 16 进制）\n",
-    "float：浮点型\n",
-    "complex：复数类型，由实数部分和虚数部分构成\n",
+    "int：长整型 - 不带小数点的正负整数，支持八进制/十六进制\n",
+    "float：浮点型，小数都是浮点型，支持科学计数法表示\n",
+    "complex：复数，用 a + bj，或者 complex(a, b) 表示，复数的实部 a 和虚部 b 都是浮点型\n",
     "\"\"\"\n",
     "\n",
+    "# 整数\n",
     "a = 1\n",
     "print(type(a))\n",
     "\n",
+    "# 浮点数\n",
     "b = 1.1\n",
-    "b2 = 2.5e2  # 250，用科学计数法表示的浮点型\n",
+    "b2 = 2.5e2  # 250，科学计数法表示\n",
     "print(type(b))\n",
     "print(type(b2))\n",
     "\n",
-    "c = 1 + 2j  # a + bj,或者 complex(a, b) 表示，复数的实部 a 和虚部 b 都是浮点型\n",
+    "# 复数\n",
+    "c = 1 + 2j  # 复数\n",
     "print(type(c))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: '1+2j'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mint\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39m1+2j\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '1+2j'"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\nint(x) 将x转为整数\\n\\nfloat(x) 将x转为浮点数\\n\\ncomplex(x) 将x转为复数，实数部分为 x，虚数部分为 0\\n\\ncomplex(x, y) 将 x 和 y 转为复数，实数部分为 x，虚数部分为 y。x 和 y 是数字表达式\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "int(\"1+2j\")"
+    "# 数字类型转换\n",
+    "\n",
+    "\"\"\"\n",
+    "int(x) 将x转为整数\n",
+    "\n",
+    "float(x) 将x转为浮点数\n",
+    "\n",
+    "complex(x, y) 将 x 和 y 转为复数，实数部分为 x，虚数部分为 y，y 如果不传则虚数为 0\n",
+    "\"\"\"\n",
+    "\n",
+    "# 那么问题来了，x 分别都是什么类型，是不是什么类型都能转\n",
+    "int()\n",
+    "float()\n",
+    "complex()"
    ]
   },
   {
@@ -86,7 +107,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -101,9 +122,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
