--- a/src/python3_course_for_ts_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_ts_devs/notebooks/number.ipynb
@@ -72,45 +72,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"\\nint(x)\\n\\n这个方法实现的是将一个数字或字符串转换为整数\\n\\n1. 如果传参为空，则 return 0\\n注意：传参为空的意思是啥都不传，None 不行，空字符串/空列表更不行\\n\\n2. 如果 x 是一个数字，则返回 x.__int__()\\n这里展开：\\n在“万物皆对象”那章\\n\\n3. 如果 x 是浮点数，则向零方向取整\\n\\n4. 如果 x 不是一个数字，或者给定了 base 参数，则 x 必须是一个表示给定进制中整数字面值的字符串、字节串或字节数组实例。\\n该数字面值可以以 '+' 或 '-' 开头，并且可以被空格包围。进制默认为 10。有效的进制为 0 以及 2-36。进制为 0 表示将字符串中的进制作为整数字面值进行解析。\\n\""
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "10\n",
+      "1\n",
+      "-1\n"
+     ]
     }
    ],
    "source": [
     "# 接下来看一下 python 是如何进行数值类型的转换的\n",
     "\n",
     "# 下面，把你的光标移动到 int() 方法上，你将会看到这个方法的介绍\n",
+    "\n",
     "int()\n",
     "\n",
-    "\"\"\"\n",
-    "int 方法的定义是把字符串或数字转为整数\n",
+    "# int 方法的定义是把字符串或数字转为整数\n",
     "\n",
-    "但是这样：int(True) == 1 也是成立的\n",
+    "# 但是这样：\n",
     "\n",
-    "这是因为在 python 中，布尔类型其实是数值类型的子类型，这个会在 boolean 章节展开介绍，这里先留个印象\n",
+    "print(int(True) == 1)  # 也是成立的\n",
     "\n",
-    "接着继续分析 int 方法的几种传参情况：\n",
+    "# 这是因为在 python 中，布尔类型其实是数值类型的子类型，这个会在 boolean 章节展开介绍，这里先留个印象\n",
     "\n",
-    "int(x)\n",
+    "# 接着继续分析 int 方法的几种传参情况：\n",
     "\n",
-    "1. 如果传参 x 为空，则 return 0\n",
-    "注意：传参为空的意思是啥都不传，None 不行，空字符串/空列表更不行（别想着 TS了）\n",
+    "# int(x)\n",
     "\n",
-    "2. 如果 x 是一个数字，则返回 x.__int__()\n",
-    "再次注意：这里的 x 指的是实现了 __int__ 方法的数字对象\n",
+    "# 1. 如果传参 x 为空，则 return 0\n",
+    "# 注意：传参为空的意思是啥都不传，None 不行，空字符串/空列表更不行（别想着 TS了）\n",
     "\n",
-    "int(1.1) 这么写当然没有问题\n",
-    "但是下面这么写，也是可以的\n",
+    "# 2. 如果 x 是一个数字，则返回 x.__int__()\n",
+    "# 再次注意：这里的 x 指的是实现了 __int__ 方法的数字对象\n",
+    "\n",
+    "# int(1.1) 这么写当然没有问题\n",
+    "# 但是下面这么写，也是可以的\n",
+    "\n",
     "\n",
     "class MyIntClass:\n",
     "    def __init__(self, value):\n",
@@ -120,39 +123,23 @@
     "    def __int__(self):\n",
     "        return self.value\n",
     "\n",
+    "\n",
     "my_num = MyIntClass(10)\n",
     "my_int = int(my_num)  # 调用 obj.__int__() 方法\n",
     "print(my_int)  # 输出 10\n",
     "\n",
-    "我创建了一个实现了 __int__ 方法的类 MyIntClass，\n",
-    "并通过类 MyIntClass 创建了一个对象 my_num，当把 my_num 作为参数传入 int 方法，\n",
-    "int 默认会去找 __int__，如果找到了就执行并返回结果，但是 __int__ 返回的必须是 int 型，不然报错\n",
+    "# 我创建了一个实现了 __int__ 方法的类 MyIntClass，\n",
+    "# 并通过类 MyIntClass 创建了一个对象 my_num，当把 my_num 作为参数传入 int 方法，\n",
+    "# int 默认会去找 __int__，如果找到了就执行并返回结果，但是 __int__ 返回的必须是 int 型，不然报错\n",
     "\n",
-    "3. 如果 x 是浮点数，则向零方向取整\n",
-    "这个好理解，保留整数，向 0 靠近\n",
+    "# 3. 如果 x 是浮点数，则向零方向取整\n",
+    "# 这个好理解，保留整数，向 0 靠近\n",
+    "print(int(1.6))\n",
+    "print(int(-1.6))\n",
     "\n",
-    "4. 如果 x 不是一个数字，或者给定了 base 参数，则 x 必须是一个表示给定进制中整数字面值的字符串、字节串或字节数组实例。\n",
-    "该数字面值可以以 '+' 或 '-' 开头，并且可以被空格包围。进制默认为 10。有效的进制为 0 以及 2-36。进制为 0 表示将字符串中的进制作为整数字面值进行解析。\n",
-    "\"\"\""
+    "# 4. 如果 x 不是一个数字，或者给定了 base 参数，则 x 必须是一个表示给定进制中整数字面值的字符串、字节串或字节数组实例。\n",
+    "# 该 数字面值可以以 '+' 或 '-' 开头，并且可以被空格包围。进制默认为 10。有效的进制为 0 以及 2-36。进制为 0 表示将字符串中的进制作为整数字面值进行解析。"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
