feat: int 方法文档优化

--- a/src/python3_course_for_ts_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_ts_devs/notebooks/number.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -80,65 +80,121 @@
      "output_type": "stream",
      "text": [
       "True\n",
+      "True\n",
       "10\n",
-      "1\n",
-      "-1\n"
+      "20\n",
+      "32\n",
+      "-32\n",
+      "42\n",
+      "42\n",
+      "-42\n",
+      "42\n",
+      "42\n",
+      "42\n",
+      "42\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# 接下来看一下 python 是如何进行数值类型的转换的\n",
     "\n",
-    "# 下面，把你的光标移动到 int() 方法上，你将会看到这个方法的介绍\n",
+    "# 下面，把你的光标移动到 int() 方法上，你将会看到这个方法的解释\n",
     "\n",
     "int()\n",
     "\n",
-    "# int 方法的定义是把字符串或数字转为整数\n",
+    "# int 方法的官方解释是 Convert a number or string to an integer\n",
+    "# 但是严格来说 int 转换的不仅仅是字符串或者数字，还包括其他几种情况，下面一一列举\n",
     "\n",
-    "# 但是这样：\n",
+    "# 1. 布尔型\n",
+    "print(int(True) == 1)  # 这是因为在 python 中，布尔类型其实是数值类型的子类型，这个会在 boolean 章节详细介绍，这里先留个印象\n",
     "\n",
-    "print(int(True) == 1)  # 也是成立的\n",
+    "# 2. 空\n",
+    "print(int() == 0)  # 如果传参为空，则 return 0\n",
+    "# 注意：传参为空的意思是啥都不传，None 不行，空字符串/空列表更不行\n",
     "\n",
-    "# 这是因为在 python 中，布尔类型其实是数值类型的子类型，这个会在 boolean 章节展开介绍，这里先留个印象\n",
+    "# 3. 实现了 __int__ 方法的类所生成的对象\n",
     "\n",
-    "# 接着继续分析 int 方法的几种传参情况：\n",
-    "\n",
-    "# int(x)\n",
-    "\n",
-    "# 1. 如果传参 x 为空，则 return 0\n",
-    "# 注意：传参为空的意思是啥都不传，None 不行，空字符串/空列表更不行（别想着 TS了）\n",
-    "\n",
-    "# 2. 如果 x 是一个数字，则返回 x.__int__()\n",
-    "# 再次注意：这里的 x 指的是实现了 __int__ 方法的数字对象\n",
-    "\n",
-    "# int(1.1) 这么写当然没有问题\n",
-    "# 但是下面这么写，也是可以的\n",
+    "print(int(10))  # 数字类型默认实现了 __int__ 方法，因此可以被转换\n",
     "\n",
     "\n",
+    "# 自定义类 MyIntClass 实现了 __int__ 方法，因此对象 my_num 也可以被转换\n",
     "class MyIntClass:\n",
     "    def __init__(self, value):\n",
     "        self.value = value\n",
     "\n",
-    "    # __init__ 必须返回 int 类型\n",
+    "    # 注意：__int__ 返回的必须是 int 型，不然报错\n",
     "    def __int__(self):\n",
     "        return self.value\n",
     "\n",
     "\n",
-    "my_num = MyIntClass(10)\n",
-    "my_int = int(my_num)  # 调用 obj.__int__() 方法\n",
-    "print(my_int)  # 输出 10\n",
+    "my_num = MyIntClass(20)\n",
+    "print(int(my_num))  # 因为在执行 int 方法的时候，它会寻找对象上的 __int__ 方法，如果找到了即执行并返回结果\n",
     "\n",
-    "# 我创建了一个实现了 __int__ 方法的类 MyIntClass，\n",
-    "# 并通过类 MyIntClass 创建了一个对象 my_num，当把 my_num 作为参数传入 int 方法，\n",
-    "# int 默认会去找 __int__，如果找到了就执行并返回结果，但是 __int__ 返回的必须是 int 型，不然报错\n",
+    "# 4. 浮点数\n",
+    "# 结果向零方向取整，这个好理解\n",
+    "print(int(32.6))\n",
+    "print(int(-32.6))\n",
     "\n",
-    "# 3. 如果 x 是浮点数，则向零方向取整\n",
-    "# 这个好理解，保留整数，向 0 靠近\n",
-    "print(int(1.6))\n",
-    "print(int(-1.6))\n",
+    "# 5. 字符串 / 字节串 / 字节数组\n",
+    "# 如果传入的是字符串、字节串或者字节数组，首先要注意一个参数 base，\n",
+    "# 就像是 TS 里面的 parseInt 方法一样，int 方法也接收一个参数，表示要转换数字的进制，默认为 10，即十进制\n",
+    "# 注意：在这种情况下只能传入”整数字面值“，但是可以带正负号，且首尾可以有空格\n",
+    "# tip：字面值（Literal）是指表示特定值的语法表示形式。它们是代码中直接使用的固定值，而不是变量或计算结果\n",
+    "# 看例子：\n",
     "\n",
-    "# 4. 如果 x 不是一个数字，或者给定了 base 参数，则 x 必须是一个表示给定进制中整数字面值的字符串、字节串或字节数组实例。\n",
-    "# 该 数字面值可以以 '+' 或 '-' 开头，并且可以被空格包围。进制默认为 10。有效的进制为 0 以及 2-36。进制为 0 表示将字符串中的进制作为整数字面值进行解析。"
+    "# 整数字面值字符串\n",
+    "print(int(\"42\"))\n",
+    "print(int(\" 42 \"))  # 首尾有空格\n",
+    "print(int(\"-42\"))  # 加了个负号\n",
+    "# int(\"42.2\") 不行，不是整数\n",
+    "\n",
+    "# 整数字面值字节串\n",
+    "print(int(b\"42\"))\n",
+    "print(int(b\"101010\", base=2))\n",
+    "# int(bytes([72, 101, 108, 108, 111])) 不行，不支持构造函数生成，要是字面值\n",
+    "# int(b\"42\", base=2) 不行，42 不是二进制\n",
+    "\n",
+    "# 整数字面值字节数组\n",
+    "print(int(bytearray(b\"42\")))\n",
+    "print(int(bytearray(b\"101010\"), 2))\n",
+    "\n",
+    "# 最后一点需要注意的是 base 的范围为 2-36，以及 0\n",
+    "# 当 base 为 0 的时候，int 函数会根据前缀来确定其解析进制\n",
+    "\n",
+    "int(\"42\", 0)  # 解析为十进制\n",
+    "int(\"0x42\", 0)  # 解析为十六进制\n",
+    "int(\"0o42\", 0)  # 解析为八进制\n",
+    "int(\"0b101010\", 0)  # 解析为二进制"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(b\"42\")"
    ]
   }
  ],
