--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -179,22 +179,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "42"
+       "0.0"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "int(b\"42\")"
+    "float()"
    ]
   }
  ],
