--- a/src/python3_course_for_devs/notebooks/string.ipynb
+++ b/src/python3_course_for_devs/notebooks/string.ipynb
@@ -4,86 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```ts\n",
-    "const str = \"this is a string\";\n",
-    "```\n"
+    "# 字符串\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "str = \"this is a string\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "10\n"
+     ]
     }
    ],
    "source": [
-    "type(str)"
+    "# 字符串字面量定义\n",
+    "\n",
+    "a = \"this a str\"  # 单双引号都可以\n",
+    "\n",
+    "print(type(a))\n",
+    "print(len(a))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "16"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'t'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
