feat: 浮点数计算

--- a/src/python3_course_for_devs/notebooks/float_calc.ipynb
+++ b/src/python3_course_for_devs/notebooks/float_calc.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -27,20 +27,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1000000000000000055511151231257827021181583404541015625\n",
+      "0.2000000000000000111022302462515654042363166809082031250\n",
+      "0.3000000000000000444089209850062616169452667236328125000\n",
+      "0.2999999999999999888977697537484345957636833190917968750\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 废话不说，直接看打印结果\n",
+    "def raw_float(number):\n",
+    "    precision = 55  # 小数精度\n",
+    "    return \"{:.{}f}\".format(number, precision)\n",
+    "\n",
+    "\n",
+    "print(raw_float(0.1))\n",
+    "print(raw_float(0.2))\n",
+    "print(raw_float(0.1 + 0.2))\n",
+    "print(raw_float(0.3))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "首先，我们知道，计算机只认识二进制，我们平时写的十进制在计算机里都要转为二进制才能进行计算，\n",
-    "但是，由于十进制对于我们来说更加直观，且与我们通常使用的数值概念更为一致，因此在数值比较的时候，还是会用十进制\n",
-    "所以会出现一种情况，就是一个看起来精确的十进制小数，实际上是一个二进制无限循环小数，也就是不精确值。\n",
+    "直截了当的说，你看到的 0.1，0.2，0.3 压根就不是 0.1，0.2，0.3。\n",
+    "0.1，0.2，0.3 都是十进制里面的值，在二进制里，只有以 2 为底的浮点数（0.5，0.25，0.125...）才能被精确表示。\n",
+    "当遇到以 10 为底的浮点数的时候，二进制是无法精确表示的。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们知道，计算机只认识二进制，我们平时写的十进制在计算机里都要转为二进制才能进行计算，那么十进制是如何转为二进制的。\n",
     "\n",
-    "好了，我们下面开始分析这个问题\n",
-    "\n",
-    "首先看一下十进制如何转二进制，这里分两种各种情况：\n",
+    "这里分两种各种情况：\n",
     "\n",
     "1. 整数十进制转二进制\n",
     "\n",
-    "整数十进制转二进制采用的是除 2 取余法（短除法）\n",
+    "整数十进制转二进制采用的是除 2 逆序取余法\n",
     "\n",
     "比如整数 13 的二进制转换，步骤如下\n",
     "\n",
@@ -51,11 +85,11 @@
     "| 3/2  | 1   | 1   |\n",
     "| 1/2  | 0   | 1   |\n",
     "\n",
-    "结果为 1101，看起来还算直观吧\n",
+    "结果为 1101\n",
     "\n",
     "2. 小数十进制转二进制\n",
     "\n",
-    "小数十进制转二进制采用的是乘 2 取整法\n",
+    "小数十进制转二进制采用的是乘 2 正序取整法\n",
     "\n",
     "比如小数 0.1 的二进制转换，步骤如下\n",
     "\n",
@@ -71,39 +105,12 @@
     "| 0.8 \\* 2 | 1        | 0.6      |\n",
     "| 0.6 \\* 2 | 1        | 0.2      |\n",
     "\n",
-    "结果为 0.00011001100... 无限循环\n",
-    "\n",
-    "因此，你知道了，0.1 由十进制转为二进制的时候结果是个无限循环小数，并不是一个精确值\n",
-    "\n",
-    "同样的，0.2 转为二进制为 0.00110011001...\n",
-    "\n",
-    "结果呢，0.1 + 0.2 同样是一个无限循环小数\n",
-    "\n",
-    "我们已经知道了，数字运算的时候当它被转为十进制的时候精度会丢失，十进制近似值为 0.30000000000000004，\n",
-    "\n",
-    "显然这个值和 0.3 不相等\n",
-    "\n",
-    "但是你可能还会有疑惑，既然 0.1 + 0.2 是个无限循环小数，0.3 的二进制也是个无限循环小数，而且看起来，它们是一样的无限循环小数，\n",
-    "那么为什么不用二进制直接进行对比，而要转为十进制呢，那是因为在计算机中，就算是二进制也是用有限的位数进行存储的，一样存在舍入误差\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.30000000000000004\n",
-      "0.3\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(0.1 + 0.2)\n",
-    "print(0.3)"
+    "结果为 0.00011001100...，你知道了，0.1 由十进制转为二进制的时候结果是个无限循环小数，\n",
+    "同样，0.2 转为二进制为 0.00110011001...，\n",
+    "但是，在二进制存储的时候计算机不可能把所有无限位数都存起来，实际上双精度浮点数小数部分只有 52 位，\n",
+    "所以 0.1 和 0.2 在二进制表示的时候都是会被截断的，截断的时候遇 1 进位遇 0 舍掉，因此在这一步 0.1 和 0.2 已经丢失了精度，\n",
+    "它们根本就不是十进制 0.1 和 0.2 的准确值，都是一个截断之后的近似值。同理 0.3 也是一样的。\n",
+    "当比较 0.1 + 0.2 == 0.3 的时候，由于两边都不是十进制的准确值，所以最后才会得到 False。\n"
    ]
   }
  ],
