--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -30,49 +30,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n",
-      "<class 'float'>\n",
-      "<class 'complex'>\n"
-     ]
-    }
-   ],
    "source": [
-    "\"\"\" \n",
+    "# 数值类型\n",
+    "\n",
+    "## 类型分类\n",
+    "\n",
     "python 中数值类型有三种：\n",
-    "int：长整型\n",
-    "float：浮点型\n",
-    "complex：复数，用 a + bj，或者 complex(a, b) 表示，复数的实部 a 和虚部 b 都是浮点型\n",
-    "\"\"\"\n",
     "\n",
-    "# 整型\n",
-    "a = 1  # 正\n",
-    "a2 = -1  # 负\n",
-    "a3 = 0xA0F  # 十六进制\n",
-    "a4 = 0o37  # 八进制\n",
+    "- int: 长整型\n",
+    "- float: 双精度浮点型\n",
+    "- complex: 复数类型\n",
     "\n",
-    "# 浮点型\n",
-    "b = 1.1  # 小数\n",
-    "b2 = 2.5e2  # 科学计数法表示的小数\n",
-    "\n",
-    "# 复数\n",
-    "c = 1 + 2j\n",
-    "\n",
-    "print(type(a))\n",
-    "print(type(b))\n",
-    "print(type(c))"
+    "tip: 在 python 中布尔类型是数值类型的子类型，详细解释在 [布尔型]('./boolean.ipynb')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 字面值声明\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# int\n",
+    "a = 1  # 正整数\n",
+    "a2 = -1  # 负整数\n",
+    "a3 = 0xA0F  # 十六进制整数\n",
+    "a4 = 0o37  # 八进制整数\n",
+    "\n",
+    "# float\n",
+    "b = 1.1  # 小数\n",
+    "b2 = 2.5e2  # 科学计数法表示的小数\n",
+    "\n",
+    "# complex：用 a + bj 或 complex(a, b) 表示，复数的实部 a 和虚部 b 都是浮点型\n",
+    "c = 1 + 2j"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 类型转换\n",
+    "\n",
+    "接下来看一下 python 如何进行数值类型转换\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +93,6 @@
      "text": [
       "True\n",
       "True\n",
-      "10\n",
       "20\n",
       "32\n",
       "-32\n",
@@ -100,34 +111,33 @@
        "42"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 接下来看一下 python 是如何进行数值类型的转换的\n",
-    "\n",
-    "# 下面，把你的光标移动到 int() 方法上，你将会看到这个方法的解释\n",
+    "# 跟着我，把手中的光标移动到 int() 方法上。你将会看到 int 方法的官方定义\n",
     "\n",
     "int()\n",
     "\n",
-    "# int 方法的官方解释是 Convert a number or string to an integer\n",
-    "# 但是严格来说 int 转换的不仅仅是字符串或者数字，还包括其他几种情况，下面一一列举\n",
+    "# int 方法的官方解释是：Convert a number or string to an integer\n",
+    "# 但是实际使用时你会发现，官方的定义太过笼统，许多细节都没有说，如果没有把这些细节搞清楚，那么就会越用越迷惑\n",
+    "# 其实 int 不只是仅仅接收数字或者字符串这么简单，只要是满足下面要求的参数都是可以的\n",
     "\n",
     "# 1. 布尔型\n",
-    "print(int(True) == 1)  # 这是因为在 python 中，布尔类型其实是数值类型的子类型，这个会在 boolean 章节详细介绍，这里先留个印象\n",
+    "# 在文章开篇我们提了一句布尔型其实是数值类型的子类型，因此布尔型实际上是可以用数字表示的\n",
+    "print(int(True) == 1)\n",
     "\n",
     "# 2. 空\n",
-    "print(int() == 0)  # 如果传参为空，则 return 0\n",
-    "# 注意：传参为空的意思是啥都不传，None 不行，空字符串/空列表更不行\n",
+    "print(int() == 0)  # int 方法可以不传参数，返回结果为 0\n",
+    "# 注意：空的意思是啥都不传，None 不行，空字符串/空列表更不行\n",
     "\n",
     "# 3. 实现了 __int__ 方法的类所生成的对象\n",
+    "# 数值类型默认实现了 __int__ 方法，因此在 int(一个数字) 的时候会调用并返回 __int__ 的结果作为转换结果\n",
+    "# 因此如果你自定义一个实现了 __int__ 方法的类，那么它的对象也是可以被 int 转换的，看例子：\n",
     "\n",
-    "print(int(10))  # 数字类型默认实现了 __int__ 方法，因此可以被转换\n",
     "\n",
-    "\n",
-    "# 自定义类 MyIntClass 实现了 __int__ 方法，因此对象 my_num 也可以被转换\n",
     "class MyIntClass:\n",
     "    def __init__(self, value):\n",
     "        self.value = value\n",
@@ -138,16 +148,15 @@
     "\n",
     "\n",
     "my_num = MyIntClass(20)\n",
-    "print(int(my_num))  # 因为在执行 int 方法的时候，它会寻找对象上的 __int__ 方法，如果找到了即执行并返回结果\n",
+    "print(int(my_num))\n",
     "\n",
     "# 4. 浮点数\n",
-    "# 结果向零方向取整，这个好理解\n",
+    "# 浮点数也是数值类型，也是实现了 __int__ 的，但是注意，浮点数转整数是丢掉小数位，保留整数位\n",
     "print(int(32.6))\n",
     "print(int(-32.6))\n",
     "\n",
     "# 5. 字符串 / 字节串 / 字节数组\n",
     "# 如果传入的是字符串、字节串或者字节数组，首先要注意一个参数 base，\n",
-    "# 就像是 TS 里面的 parseInt 方法一样，int 方法也接收一个参数，表示要转换数字的进制，默认为 10，即十进制\n",
     "# 注意：在这种情况下只能传入”整数字面值“，但是可以带正负号，且首尾可以有空格\n",
     "# tip：字面值（Literal）是指表示特定值的语法表示形式。它们是代码中直接使用的固定值，而不是变量或计算结果\n",
     "# 看例子：\n",
@@ -179,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +279,7 @@
     "print(complex(-1.1, -1.2))  # 浮点数，可以\n",
     "print(complex(+False, -True))  # 布尔型，可以（啰嗦最后一遍，python 中布尔型是数值类型的子类型）\n",
     "\n",
-    "# 注意：来新东西了啊，complex 方法如果只传一个参数，可以是数字或者字符串，但传两个参数，那么两个参数都必须是数字\n",
+    "# 注意：complex 方法如果只传一个参数，可以是数字或者字符串，但传两个参数，那么两个参数都必须是数字\n",
     "# 还有：complex 参数不支持字节串或者字节数组了，只支持字面值字符串\n",
     "\n",
     "# complex(\"-3\", 3)  # 错\n",
@@ -283,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -335,10 +344,10 @@
       "True\n",
       "3.556\n",
       "2\n",
-      "1\n",
-      "0.15726888821521878\n",
-      "3.047471717698662\n",
-      "[5, 3, 8, 1]\n"
+      "7\n",
+      "0.8700613728386878\n",
+      "5.114737736295881\n",
+      "[1, 5, 8, 3]\n"
      ]
     }
    ],
@@ -359,9 +368,8 @@
     "\n",
     "print(math.modf(10.3))  # 返回一个元组类型包括这个数的小数和整数部分，(小数部分, 整数部分)，两部分数值符号与参数相同，整数部分以浮点型表示\n",
     "# 注意！！：这里 10.3 输出的小数部分不是 0.3，是 0.3000000000000007\n",
-    "# 如果有 js 开发经验的同学，想起来点啥没？那道经典的面试题？\n",
-    "print(0.1 + 0.2 != 0.3)  # 为什么？\n",
-    "# 因为篇幅的原因，浮点数计算详细介绍这部分放到了 float_calc 这章\n",
+    "# 想起来点啥没？那道经典的面试题？0.1 + 0.2 != 0.3？\n",
+    "print(0.1 + 0.2 != 0.3)  # why？解释放在 float_calc 这一章节\n",
     "\n",
     "# 四舍五入\n",
     "print(round(3.55555, 3))\n",
